bugs fix with the release apk

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,15 @@ android {
         multiDexEnabled true
     }
 
+    signingConfigs {
+        release {
+            storeFile file("F:\\Sample-14_Nov_bug_fixing\\app\\release_apk.jks")
+            storePassword "eracord"
+            keyAlias "eracord"
+            keyPassword "eracord"
+        }
+    }
+
     dexOptions {
         javaMaxHeapSize "4g"
     }
@@ -19,6 +28,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
 }
