--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "com.example.vidhiraj.sample"
+        applicationId "com.eracordapp.vidhiraj.sample"
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
@@ -46,6 +46,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.0.0'
     compile 'com.android.support:cardview-v7:23.0.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
-  //  compile 'com.android.support:support-v4:25.0.1'
+    //  compile 'com.android.support:support-v4:25.0.1'
 }
 
